# TywRenderer

./: .gitignore  CMakeLists.txt  README.md  WinBuildAll.bat
Assets/Geometry/boblamp/: boblampclean.md5mesh
Assets/Geometry/cyberwarrior/: warrior.fbx
Assets/Geometry/hellknight/: hellknight.md5mesh
Assets/Shaders/Bloom/: DebugQuad.frag.spv  DefferedMRT.frag  DefferedMRT.frag.spv  DefferedMRT.vert.spv  DefferedModel.frag  DefferedModel.frag.spv  PostProcess.vert
Assets/Shaders/DeferredShading/: DebugQuad.frag  DebugQuad.frag.spv  DebugQuad.vert  DebugQuad.vert.spv  DefferedMRT.frag  DefferedMRT.frag.spv  DefferedMRT.vert  DefferedMRT.vert.spv  DefferedModel.frag  DefferedModel.frag.spv  DefferedModel.vert  DefferedModel.vert.spv  generate-spirv.bat
Assets/Shaders/FontRendering/: FontRendering.frag  FontRendering.frag.spv  FontRendering.vert  FontRendering.vert.spv  NonSdf.frag  NonSdf.frag.spv  generate-spirv.bat  generate-spirv_NonSdf.bat
Assets/Shaders/ImGui/: generate-spirv.bat  text.frag  text.frag.spv  text.vert  text.vert.spv
Assets/Shaders/NormalMapping/: NormalMapping.frag  NormalMapping.frag.spv  NormalMapping.vert  NormalMapping.vert.spv  generate-spirv.bat
Assets/Shaders/PhysicalBasedShading/: generate-spirv.bat  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
Assets/Shaders/SSAO/: Blur.frag  Blur.frag.spv  DebugNormals.frag  DebugNormals.geom  DebugNormals.geom.spv  DebugNormals.vert  DebugQuad.frag  DebugQuad.frag.spv  DefferedMRT.frag  DefferedMRT.frag.spv  DefferedMRT.vert  DefferedMRT.vert.spv  DefferedModel.frag  DefferedModel.frag.spv  DefferedModel.vert  Fullscreen.vert  SSAO.frag  SSAO.frag.spv  SSAO.vert  SSAO.vert.spv  generate-spirv.bat
Assets/Shaders/ShadowMapping/: generate-spirv.bat  offscreen.frag  offscreen.frag.spv  offscreen.vert  offscreen.vert.spv  plane.vert.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  shadowmapping.frag  shadowmapping.frag.spv  shadowmapping.vert  shadowmapping.vert.spv  testquad.frag  testquad.frag.spv  testquad.vert  testquad.vert.spv
Assets/Shaders/SkeletalAnimation/: cpuAnimation.frag  cpuAnimation.frag.spv  cpuAnimation.vert  cpuAnimation.vert.spv  generate-spirv.bat
Assets/Shaders/StaticModel/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
Assets/Shaders/Texture/: generate-spirv.bat  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
Assets/Shaders/Triangle/: generate-spirv.bat
Assets/Textures/hellknight/: gob2_s_bc4.KTX  gob_s_bc4.KTX  hellknight_bc2.KTX  hellknight_local_bc5.KTX  tongue_bc2.KTX  tongue_local_bc5.KTX  tongue_s_bc4.KTX
Assets/Textures/nanosuit/: arm_dif_bc2.KTX  (+14 more)
Assets/materials/: monsters.mtr  suit.mtl
CMakeModules/: FindASSIMP.cmake  FindFreetype.cmake  FindFreetype_custom.cmake  FindSDL2.cmake  FindZLIB.cmake
Projects/: CMakeLists.txt
Projects/AsteroidGame/: Actor.h  AsteroidNode.cpp  AsteroidNode.h  BulletNode.cpp  BulletNode.h  CMakeLists.txt  Engine.cpp  Engine.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  Helpers.h  ISceneNode.h  Main.cpp  Physics.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  ShipNode.cpp  ShipNode.h
Projects/Bloom/: CMakeLists.txt  Main.cpp
Projects/DeferredShading/: CMakeLists.txt  Main.cpp
Projects/FontRendering/: CMakeLists.txt  Main.cpp
Projects/NormalMapping/: CMakeLists.txt  Main.cpp
Projects/PhysicalBasedShading/: CMakeLists.txt  Main.cpp
Projects/SSAO/: CMakeLists.txt  Main.cpp
Projects/ShadowMapping/: CMakeLists.txt  Main.cpp
Projects/SkeletalAnimation/: CMakeLists.txt  Main.cpp
Projects/StaticModel/: CMakeLists.txt  Main.cpp
Projects/Texture/: CMakeLists.txt  Main.cpp
Projects/Triangle/: CMakeLists.txt  Main.cpp
Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  DOD.h  DODResource.h  IRenderer.h  IRendererInitializer.cpp  IRendererInitializer.h  TywRenderer.cpp  TywRenderer.h  TywRendererHelpers.h  VKRenderer.cpp  VKRenderer.h  VKRendererGUI.cpp  VertexCache.cpp  VertexCache.h  VulkanRendererInitializer.cpp  VulkanRendererInitializer.h  tri_trisurf.cpp
Renderer/AnimationManager/: AnimationMacro.h  AnimationManager.cpp  AnimationManager.h
Renderer/AnimationManager/MD5Anim/: MD5Anim.cpp  MD5Anim.h
Renderer/EventManager/: EventManagerImpl.cpp  EventManagerImpl.h  Events.cpp  Events.h  IEventManager.cpp  IEventManager.h
Renderer/Geometry/: JointTransform.cpp  JointTransform.h  TangentAndBinormalCalculator.hpp  VertData.h
Renderer/MeshLoader/: ImageManager.cpp  ImageManager.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Model_assimp.cpp  Model_local.h  Model_md5.cpp  Model_obj.cpp  Model_obj.h  Model_sprite.cpp
Renderer/SceneManager/: CameraNode.cpp  CameraNode.h  ISceneNode.h  RenderPass.hpp  RootNode.cpp  RootNode.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNodeProperties.cpp  SceneNodeProperties.h
Renderer/Vulkan/: DrawCallManager.cpp  DrawCallManager.h  VkBufferLayoutManager.cpp  VkBufferLayoutManager.h  VkBufferObject.cpp  VkBufferObject.h  VkBufferObjectManager.cpp  VkBufferObjectManager.h  VkDrawCallDispatcher.cpp  VkDrawCallDispatcher.h  VkEnums.h  VkFrameBufferManager.cpp  VkFrameBufferManager.h  VkGPUMemoryManager.cpp  VkGPUMemoryManager.h  VkGpuProgram.cpp  VkGpuProgram.h  VkImageManager.cpp  VkImageManager.h  VkPipelineLayoutManager.cpp  VkPipelineLayoutManager.h  VkPipelineManager.cpp  VkPipelineManager.h  VkRenderPassManager.cpp  VkRenderPassManager.h  VkRenderSystem.cpp  VkRenderSystem.h  VkTexture2D.cpp  VkTexture2D.h  VkUniformBufferManager.cpp  VkUniformBufferManager.h  VulkanAndroid.cpp  VulkanAndroid.h  VulkanDebug.cpp  VulkanDebug.h  VulkanMeshLoader.cpp  VulkanMeshLoader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTextureLoader.cpp  (+3 more)
RendererPch/: macro.h  stdafx.h
ScriptsAndroid/: build.py  build_dependencies.py  setup.py
ScriptsWin32/: Build_Debug.bat  Build_Release.bat  Config.bat  ConfigAndBuildDependencies.bat  Config_FinalBuild.bat  CopyDllsToAppDir_Debug.bat  CopyDllsToAppDir_Release.bat
(+16 files in other folders)
