CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(TywRendererDemos)


ADD_SUBDIRECTORY(Triangle)
ADD_SUBDIRECTORY(Texture)
ADD_SUBDIRECTORY(StaticModel)
ADD_SUBDIRECTORY(NormalMapping)
ADD_SUBDIRECTORY(SkeletalAnimation)
ADD_SUBDIRECTORY(FontRendering)
ADD_SUBDIRECTORY(ShadowMapping)
ADD_SUBDIRECTORY(DeferredShading)
ADD_SUBDIRECTORY(PhysicalBasedShading)
ADD_SUBDIRECTORY(SSAO)

